white stripe removed

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                     <div class="card-content">
                       <div class="media">
                         <div class="media-content">
-                          <p class="title is-4">Office-1</p>
-                          <p class="subtitle is-6">downtown</p>
+                          <p class="subtitle is-6 is-uppercase mt-1">downtown</p>
                         </div>
                       </div>
                   
@@ -119,8 +118,7 @@
                     <div class="card-content">
                       <div class="media">
                         <div class="media-content">
-                          <p class="title is-4">Office-2</p>
-                          <p class="subtitle is-6">city scape</p>
+                          <p class="subtitle is-6 is-uppercase mt-1">city scape</p>
                         </div>
                       </div>
                       <div class="content">
@@ -143,8 +141,7 @@
                     <div class="card-content">
                       <div class="media">
                         <div class="media-content">
-                          <p class="title is-4">Office-3</p>
-                          <p class="subtitle is-6">bussines avenue</p>
+                          <p class="subtitle is-6 is-uppercase mt-1">bussines avenue</p>
                         </div>
                       </div>
                       <div class="content">
@@ -167,8 +164,7 @@
                     <div class="card-content">
                       <div class="media">
                         <div class="media-content">
-                          <p class="title is-4">Office-4</p>
-                          <p class="subtitle is-6">Q-park</p>
+                          <p class="subtitle is-6 is-uppercase mt-1">Q-park</p>
                         </div>
                       </div>
                   
@@ -317,7 +313,7 @@
 </footer>
 
 <!-- modal -->
-<div class="modal has-text-centered" id="modal">
+<div class="modal" id="modal">
     <div class="modal-background"></div>
     <div class="modal-content has-background-white px-5 py-5">
         <div class="field">
@@ -325,9 +321,6 @@
               <input class="input" type="email" placeholder="Email">
               <span class="icon is-small is-left">
                 <i class="fas fa-envelope"></i>
-              </span>
-              <span class="icon is-small is-right">
-                <i class="fas fa-check"></i>
               </span>
             </p>
           </div>
@@ -340,9 +333,17 @@
             </p>
           </div>
           <div class="field">
+            <div class="control">
+              <label class="checkbox">
+                <input type="checkbox" class="checkbox">
+                I agree to the Terms & Conditions
+              </label>
+            </div>
+          </div>
+          <div class="field has-text-right">
             <p class="control">
               <button class="button is-success">
-                Login
+                Sign Up
               </button>
             </p>
           </div>
